[package]
name = "zeromq-src"
version = "0.3.7"
authors = ["jean-airoldie <maxence.caron@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
Source code and logic to build ZeroMQ from source
"""
repository = "https://github.com/jean-airoldie/zeromq-src-rs"
readme = "README.md"
keywords = ["libzmq", "zmq", "zeromq"]

[workspace]
members = ["testcrate"]

[dependencies]
cc = { version = "1.2.32", features = ["parallel"] }
dircpy = "0.3.19"

[dev-dependencies]
testcrate = { path = "./testcrate", features = ["libsodium"] }
